syntax = "proto3";

package kurtome.dote.proto.api.action;

import "api/person.proto";
import "api/common.proto";

message GetLoggedInPersonRequest {
  bool get_details = 1;
}

message GetLoggedInPersonResponse {
  api.ActionStatus response_status = 1;
  api.Person person = 2;
}
